# cookiecutter-django-ya

./: .gitignore  README.rst  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: Procfile  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/project/app/: __init__.py  celery.py
{{cookiecutter.project_slug}}/project/settings/: base.py
